# ct_agent_nlp_parser_module

./: .gitignore  __init__.py  main.py  pyproject.toml
nlp-parser/: parser.py  schema.py
nlp_parser/: parser.py  validator.py
