[project]
name = "ct_agent_nlp_parser_module"
version = "0.1.0"
description = "NLP parser for json data parsing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pydantic>=2.0",
	"openai>=1.0",
	"python-dotenv>=1.0.0",
	"shared",
]

[tool.uv.sources]
shared = { workspace = true }

