[project]
name = "ct_agent_nlp_parser_module"
version = "0.1.0"
description = "NLP Parser for trade signals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "openai>=2.16"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlp_parser"]
